<?xml version="1.0" encoding="utf-8"?>
<!--LinearLaylout - основной слой где каждый элемент распологает либо друг возле друга либо наоборот-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:baselineAligned="false"
        android:fontFamily="@font/inter_bold"
        android:text="Cookify"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter"
        android:text="Log in"
        android:textColor="#000000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="username"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textColorHint="#6a6a6a"
        android:fontFamily="@font/inter"

        />

    <EditText
        android:id="@+id/user_pass_auth"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColor="#000000"
        android:textColorHint="#6a6a6a"
        android:fontFamily="@font/inter"
        />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="62dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/inter"
        android:text="Log in"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="25dp" />

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter"
        android:text="register"
        android:textColor="#757575"
        android:textSize="17sp" />

</LinearLayout>
